# orng

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
src/orng/: __init__.py  _utils.py  functional.py  orng.py
src/orng/backends/: __init__.py  cupy.py  functional.py  jax.py  numpy.py  torch.py
tests/: test_backends.py  test_functional_backends.py  test_orng.py
