[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "orng"
description = "Omni RNG: A unified, cross-backend random number generator built on the Array API standard."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Michael J. Williams" }]
dependencies = [
    "array-api-compat",
]
dynamic = [
    "version"
]

[project.urls]
Homepage = "https://github.com/sequince-dev/omni"
Repository = "https://github.com/sequince-dev/omni"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["orng*"]

[tool.setuptools_scm]

[project.optional-dependencies]
numpy = ["numpy>=1.22"]
torch = ["torch>=2.0"]
cupy = ["cupy>=12.0"]
jax = ["jax>=0.4"]

[dependency-groups]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "pre-commit",
    "mypy>=1.10",
    {include-group = "test"},
]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
extend-select = ["I"]

[tool.mypy]
python_version = "3.10"
packages = ["sequince"]
mypy_path = ["src"]
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
